kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: homework
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /homepage
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
          - path: /metrics.html
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 80
